// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatsTestCases should print correct stats for hot+production 1`] = `
{
  "assets": [
    {
      "chunks": [
        "main",
      ],
      "name": "bundle.js",
      "size": 1626,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "type": "chunk",
    },
  ],
  "errors": [],
  "errorsCount": 0,
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "./index.js",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/hot+production/index.js",
      "moduleType": "js",
      "name": "./index.js",
      "size": 25,
      "type": "module",
    },
  ],
}
`;

exports[`StatsTestCases should print correct stats for normal-errors 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "name": "bundle.js",
      "size": 1672,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 20,
      "type": "chunk",
    },
  ],
  "errors": [
    {
      "formatted": "[0m[1m[38;5;9merror[internal][0m[1m: Resolve error[0m
  [0m[34m┌─[0m tests/statsCases/normal-errors/index.js:1:1
  [0m[34m│[0m
[0m[34m1[0m [0m[34m│[0m [0m[31mimport "not-exist";[0m
  [0m[34m│[0m [0m[31m^^^^^^^^^^^^^^^^^^^[0m [0m[31mFailed to resolve not-exist[0m

",
      "message": "Failed to resolve not-exist",
    },
  ],
  "errorsCount": 1,
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "./index.js",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/normal-errors/index.js",
      "moduleType": "js",
      "name": "./index.js",
      "size": 20,
      "type": "module",
    },
  ],
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for normal-errors 2`] = `
"    Asset      Size  Chunks  Chunk Names
bundle.js  1.63 KiB    main  main
chunk {main} bundle.js (main) 20 bytes [entry]
[./index.js] 20 bytes {main}

[0m[1m[38;5;9merror[internal][0m[1m: Resolve error[0m
  [0m[34m┌─[0m tests/statsCases/normal-errors/index.js:1:1
  [0m[34m│[0m
[0m[34m1[0m [0m[34m│[0m [0m[31mimport "not-exist";[0m
  [0m[34m│[0m [0m[31m^^^^^^^^^^^^^^^^^^^[0m [0m[31mFailed to resolve not-exist[0m

"
`;

exports[`StatsTestCases should print correct stats for simple 1`] = `
{
  "assets": [
    {
      "chunkNames": [
        "main",
      ],
      "chunks": [
        "main",
      ],
      "name": "bundle.js",
      "size": 1735,
      "type": "asset",
    },
  ],
  "chunks": [
    {
      "entry": true,
      "files": [
        "bundle.js",
      ],
      "id": "main",
      "initial": true,
      "names": [
        "main",
      ],
      "size": 26,
      "type": "chunk",
    },
  ],
  "errors": [],
  "errorsCount": 0,
  "modules": [
    {
      "chunks": [
        "main",
      ],
      "id": "./index.js",
      "identifier": "<PROJECT_ROOT>/tests/statsCases/simple/index.js",
      "moduleType": "js",
      "name": "./index.js",
      "size": 26,
      "type": "module",
    },
  ],
  "warnings": [],
  "warningsCount": 0,
}
`;

exports[`StatsTestCases should print correct stats for simple 2`] = `
"    Asset      Size  Chunks  Chunk Names
bundle.js  1.69 KiB    main  main
chunk {main} bundle.js (main) 26 bytes [entry]
[./index.js] 26 bytes {main}"
`;
